--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section id="header">
+        <div class="header-navbar">
+            <h1>Header</h1>
+        </div>
+    </section>
 </body>
 </html>
